deployments/auxiliary-service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auxiliary-service
  namespace: auxiliary-service
  labels:
    app: auxiliary-service
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: auxiliary-service
